@@ -1,0 +1,3 @@
+
+module rec A : sig type t end = B and B : sig type t = A.t end = A;;
+
